--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -19,5 +19,5 @@ jobs:
     - name: Install dependencies
       run: npm install
 
-    - name: Run Unit tests 
+    - name: Run Unit test
       run: npm test
