--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   run-test:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: app
     steps:
     - name: Checkout repo
       uses: actions/checkout@v2
