--- a/.github/workflows/build-deploy-main.yml
+++ b/.github/workflows/build-deploy-main.yml
@@ -34,5 +34,6 @@ jobs:
         ECR_REPOSITORY: chainsafe
         IMAGE_TAG: main
       run: |
+        docker -v 
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
