--- a/.github/workflows/build-deploy-release.yml
+++ b/.github/workflows/build-deploy-release.yml
@@ -1,14 +1,11 @@
-name: Build and Deploy Docker image [Main]
+name: Build and Deploy Docker image [Release]
 
 on:
-  pull_request:
-    branches:
-      - main
-    types: [closed]
+  release: 
+    types: [published]
 
 jobs:
   build-deploy-image:
-    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -28,11 +25,16 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
-    - name: Build, tag, and push image to Amazon ECR
-      env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: chainsafe
-        IMAGE_TAG: main
+    - name: Get Release
+      id: release
       run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        echo github.event.release.release
+
+    # - name: Build, tag, and push image to Amazon ECR
+    #   env:
+    #     ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+    #     ECR_REPOSITORY: chainsafe
+    #     IMAGE_TAG: main
+    #   run: |
+    #     docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+    #     docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
