--- a/.github/workflows/build-deploy-release.yml
+++ b/.github/workflows/build-deploy-release.yml
@@ -27,8 +27,12 @@ jobs:
 
     - name: Get Release
       id: release
+      env:
+        RELEASE: ${{ github.event.release.release }}
+        ECR_REPOSITORY: chainsafe
+        IMAGE_TAG: main
       run: |
-        echo ${{ github.event.release.release }}
+        echo $RELEASE
 
     # - name: Build, tag, and push image to Amazon ECR
     #   env:
