--- a/.github/workflows/build-deploy-release.yml
+++ b/.github/workflows/build-deploy-release.yml
@@ -29,8 +29,8 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: chainsafe
-        IMAGE_TAG: ${{github.ref_name}}
-        EVENT: ${{ github.event }}
+        IMAGE_TAG: ${{ github.ref_name}}
+        EVENT: ${{ github.event.release.target_commitish }}
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
