--- a/.github/workflows/build-deploy-release.yml
+++ b/.github/workflows/build-deploy-release.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build-deploy-image:
-    if: github.event.release.target_commitish != "main"
+    if: ${{ github.event.release.target_commitish != 'main' }}
     runs-on: ubuntu-latest
     defaults:
       run:
