--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -6,32 +6,9 @@ team:qa:
 - app/tests/*
 - app/tests/**/*
 
-# team:docs:
-# - 
+team:docs:
+- app/README.md
 
-# team:devops:
-# -
-
-
-# # Add 'test' label to any change to *.spec.js files within the source dir
-# test:
-# - src/**/*.spec.js
-
-# # Add 'source' label to any change to src files within the source dir EXCEPT for the docs sub-folder
-# source:
-# - any: ['src/**/*', '!src/docs/*']
-
-# # Add 'frontend` label to any change to *.js files as long as the `main.js` hasn't changed
-# frontend:
-# - any: ['src/**/*.js']
-#   all: ['!src/main.js']
-
-
-# `team: backend`: Assign this label if in the PR are changes in files located in `app/src` folder
-
-# `team: qa`: Assign this label if in the PR are changes in files located in `app/tests` folder
-
-# `team: docs`: Assign this label if the file `app/README.md` has been changed
-
-# `team: devops`: Assign this label if the file `app/Dockerfile` or `app/Taskfile.yml` has been
-# changed
+team:devops:
+- app/Dockerfile
+- app/Taskfile.yml
